--- a/Chairbot Interface/Base.lproj/Main.storyboard
+++ b/Chairbot Interface/Base.lproj/Main.storyboard
@@ -35,10 +35,10 @@
                                     <color key="titleShadowColor" red="0.62680365169999996" green="1" blue="0.9034305748" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
-                                    <action selector="sendLines" destination="BYZ-38-t0r" eventType="touchUpInside" id="9RC-vI-Vgh"/>
+                                    <action selector="sendLines" destination="BYZ-38-t0r" eventType="touchUpInside" id="WS2-CN-Xqy"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="u53-oE-Rfh">
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="u53-oE-Rfh">
                                 <rect key="frame" x="656" y="20" width="136" height="88"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.93942769969999995" green="0.92910915289999996" blue="0.94383500649999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -70,7 +70,11 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
                     <connections>
+                        <outlet property="clearButton" destination="RpI-fk-6Y5" id="zkP-uW-GTD"/>
+                        <outlet property="drawUIView" destination="LOT-0B-Fe1" id="bUo-S8-sxR"/>
                         <outlet property="drawView" destination="LOT-0B-Fe1" id="MCE-dT-5xF"/>
+                        <outlet property="executeButton" destination="bc2-hb-ag3" id="Qkg-qT-SmA"/>
+                        <outlet property="stopButton" destination="u53-oE-Rfh" id="ddN-nB-MOf"/>
                         <outlet property="webView" destination="B9F-oi-tFE" id="o3H-Z8-29M"/>
                     </connections>
                 </viewController>
