--- a/Chairbot Interface/Base.lproj/Main.storyboard
+++ b/Chairbot Interface/Base.lproj/Main.storyboard
@@ -96,6 +96,10 @@
                                 <state key="normal" title="Left">
                                     <color key="titleShadowColor" red="0.62680365169999996" green="1" blue="0.9034305748" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="leftDown:" destination="BYZ-38-t0r" eventType="touchDown" id="4NR-Gb-7ZF"/>
+                                    <action selector="leftUp:" destination="BYZ-38-t0r" eventType="touchUpInside" id="QZA-ow-heC"/>
+                                </connections>
                             </button>
                             <button hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dIo-Vl-Pr3">
                                 <rect key="frame" x="320" y="20" width="100" height="60"/>
@@ -135,6 +139,10 @@
                                 <state key="normal" title="Right">
                                     <color key="titleShadowColor" red="0.62680365169999996" green="1" blue="0.9034305748" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="rightDown:" destination="BYZ-38-t0r" eventType="touchDown" id="ZZA-pR-Kuq"/>
+                                    <action selector="rightUp:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ewp-kX-cfx"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
